--- a/website.html
+++ b/website.html
@@ -6,14 +6,9 @@ background: #f1f1f1; -->
 <html lang="en">
   <head>
     <header id="header" class="">
-      <!-- SITE TITLE (LOGO) -->
-      <h1 class="site-title logo_white">
-        <a
-          class="site-title-link"
-          href="https://www.marie-morelle.com/"
-          title="Retour à l'accueil"
+     
         >
-          <span class="text">Patrycja Klim</span>
+          <span class="text"> Patrycja Klim</span>
           <canvas
             width="80"
             height="40"
@@ -62,7 +57,9 @@ background: #f1f1f1; -->
     <span class="dot"></span>
 
     <p style="color: #30be8e">place for the content!</p>
-<!--Progress links to application  -->
+<div class="links-header"> </div>
+    <!--Progress links to application  -->
+
     <div class="links">
       <a href="https://github.com/patrycja-klim" target="_blank">
         <img scr="  ?      " alt="GitHub" height="100px" />
@@ -75,9 +72,10 @@ background: #f1f1f1; -->
       </div>
       <div class="links">
         <a href="https://www.codewars.com/users/patrycja-klim" target="_blank">
-          <img scr=" ??        " alt="codewars" height="100px" />
+          <img scr="Logos/codewars-logo.png" alt="Codewars" height="100px" />
         </a>
       </div>
+      
 <!---Progres links -->
     </div>
   </body>
